@@ -147,8 +147,8 @@ foreach my $tuple (
     [ 672 => ['AQ', 'NF'       ]], # no AQ in libphonenumber
     [ 7   => ['RU', 'KZ'       ]],
     
-    # checked on 2019-12-11
-    # next check due 2020-12-01 (annually)
+    # checked on 2020-12-04
+    # next check due 2021-12-01 (annually)
     [ 2125288 => 'EH' ], # see https://en.wikipedia.org/wiki/Telephone_numbers_in_Western_Sahara
     [ 2125289 => 'EH' ], # see https://en.wikipedia.org/wiki/Telephone_numbers_in_Western_Sahara
     [ 262269  => 'YT' ], # Mayotte fixed lines, see http://www.wtng.info/wtng-262-fr.html
@@ -159,14 +159,15 @@ foreach my $tuple (
     [ 390549  => 'SM' ], # San Marino in Italian dialling plan, see https://en.wikipedia.org/wiki/Telephone_numbers_in_San_Marino
 
     # sourced from libphonenumber
-    # checked on 2019-12-11
-    # next check due 2020-12-01 (annually)
+    # checked on 2020-12-04
+    # next check due 2021-12-01 (annually)
     [ 441481 => 'GG' ],
     [ 447781 => 'GG' ],
     [ 447839 => 'GG' ],
     [ 447911 => 'GG' ],
     [ 441624 => 'IM' ],
     [ 447457 => 'IM' ],
+    [ 4474576 => 'IM' ],
     [ 447524 => 'IM' ],
     [ 447624 => 'IM' ],
     [ 447924 => 'IM' ],
@@ -183,8 +184,8 @@ foreach my $tuple (
     # see http://wtng.info/ccod-6.html#CC61 (Christmas Island)
     # see https://en.wikipedia.org/wiki/Telephone_numbers_in_the_Australian_Antarctic_Territory
     # see https://en.wikipedia.org/wiki/Telephone_numbers_in_Norfolk_Island
-    # checked on 2019-12-11
-    # next check due 2020-12-01 (annually)
+    # checked on 2020-12-04
+    # next check due 2021-12-01 (annually)
     [ 5999    => 'CW' ], # Curacao
     [ 6189162 => 'CC' ], # Cocos (Keeling) Islands
     [ 6189164 => 'CX' ], # Christmas Island
@@ -196,26 +197,25 @@ foreach my $tuple (
     [ 6723    => 'NF' ], # Norfolk Island
 
     # see http://en.wikipedia.org/wiki/Telephone_numbers_in_Kazakhstan
-    # checked on 2019-12-11
-    # next check due 2021-12-01 (bi-annually)
+    # checked on 2020-12-04
+    # next check due 2022-12-01 (bi-annually)
     [ 76      => 'KZ' ],
     [ 77      => 'KZ' ],
 
     # see https://en.wikipedia.org/wiki/Telephone_numbers_in_Kosovo
-    # contra Wikipedia, libphonenumber-discuss message
-    # <bcac5fd3-3738-40e7-a134-f018f22c1c47@googlegroups.com> of
-    # 2018-04-13 indicates that these are still in use until at least
-    # the end of June 2018
-    # checked on 2019-12-11
-    # next check due 2020-12-01 (bi-annually)
-    [ 37744   => 'XK' ],
-    [ 37745   => 'XK' ],
+    # checked on 2020-12-04
+    # next check due 2022-12-01 (bi-annually)
+    #
+    # in the Serbian country code ... https://en.wikipedia.org/wiki/Telephone_numbers_in_Serbia#Kosovo
     [ 38128   => 'XK' ],
     [ 38129   => 'XK' ],
     [ 38138   => 'XK' ],
     [ 38139   => 'XK' ],
-    [ 38643   => 'XK' ],
-    [ 38649   => 'XK' ],
+    # I *think* +377 and +386 are no longer used
+    # [ 37744   => 'XK' ],
+    # [ 37745   => 'XK' ],
+    # [ 38643   => 'XK' ],
+    # [ 38649   => 'XK' ],
 
     # see https://en.wikipedia.org/wiki/Global_Mobile_Satellite_System
     #     https://en.wikipedia.org/wiki/International_Networks_%28country_code%29
